# Data-Distribution-Simulator

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  push.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
build-aux/: config.h.in
dadisi/: Builder.cpp  Builder.h  Disk.cpp  Disk.h  DistCRUSH.cpp  DistCRUSH.h  DistFastRedundantShare.cpp  DistFastRedundantShare.h  DistNearestNeighbour.cpp  DistNearestNeighbour.h  DistRUSHp.cpp  DistRUSHp.h  DistRUSHr.cpp  DistRUSHr.h  DistRUSHt.cpp  DistRUSHt.h  DistRandSlice.cpp  DistRandSlice.h  DistRedundantShare.cpp  DistRedundantShare.h  DistRoundRobin.cpp  DistRoundRobin.h  DistShare.cpp  DistShare.h  DistShare_pThreads.h  Distributor.cpp  Distributor.h  ImprovedMap.cpp  ImprovedMap.h  Prime.cpp  Prime.h  RSCache.cpp  RSCache.h  RSDisk.cpp  RSDisk.h  SHA.cpp  SHA.h  ShareDisk.h  crush.cpp  crush.h  (+10 more)
doc/.svn/: entries
doc/html/: _8dep_8inc.html  _builder_8cpp.html  _builder_8cpp__incl.map  _builder_8cpp__incl.md5  _builder_8h.html  _builder_8h__dep__incl.map  _builder_8h__dep__incl.md5  _builder_8h__incl.map  _builder_8h__incl.md5  _builder_8h_source.html  _disk_8cpp.html  _disk_8cpp__incl.map  _disk_8cpp__incl.md5  _disk_8h.html  _disk_8h__dep__incl.map  _disk_8h__dep__incl.md5  _disk_8h__incl.map  _disk_8h__incl.md5  _disk_8h_source.html  _dist_c_r_u_s_h_8cpp.html  _dist_c_r_u_s_h_8cpp__incl.map  _dist_c_r_u_s_h_8cpp__incl.md5  _dist_c_r_u_s_h_8h.html  _dist_c_r_u_s_h_8h__dep__incl.map  _dist_c_r_u_s_h_8h__dep__incl.md5  _dist_c_r_u_s_h_8h__incl.map  _dist_c_r_u_s_h_8h__incl.md5  _dist_c_r_u_s_h_8h_source.html  _dist_fast_redundant_share_8cpp.html  _dist_fast_redundant_share_8cpp__incl.map  _dist_fast_redundant_share_8cpp__incl.md5  _dist_fast_redundant_share_8h.html  _dist_fast_redundant_share_8h__dep__incl.map  _dist_fast_redundant_share_8h__dep__incl.md5  _dist_fast_redundant_share_8h__incl.map  _dist_fast_redundant_share_8h__incl.md5  _dist_fast_redundant_share_8h_source.html  _dist_nearest_neighbour_8cpp.html  _dist_nearest_neighbour_8cpp__incl.map  _dist_nearest_neighbour_8cpp__incl.md5  (+353 more)
doc/html/.svn/: entries
perf_eval/: compare.cpp  compare.h  fileDistTester.cpp  test.cpp  test.h  test_private.h  test_rand_slice_grow.cpp
